# web3-trading-bot

./: .gitignore  QWEN.md  README.md  TESTING.md  pyproject.toml  requirements.txt  run_tests.py  setup.py
docs/: API_REFERENCE.md  architecture.md  implementation.md
src/: __init__.py  config_manager.py  hedge_trader.py  lighter_api.py  notification.py  trading_bot.py
tests/: test_hedge_trading.py  test_lighter_api_integration.py  test_lighter_api_mock.py
